# qiskit-qrmi

./: .gitignore  .pylintrc  Cargo.toml  README.md  pyproject.toml
examples/pulser_backend/pasqal/: pulser_backend.py  target.py
examples/qiskit_primitives/ibm/: estimator.py  requirements.txt  sampler.py
examples/qiskit_primitives/pasqal/: requirements.txt  sampler.py
examples/qrmi/c/direct_access/: CMakeLists.txt
examples/qrmi/c/pasqal_cloud/: CMakeLists.txt
examples/qrmi/c/qiskit_runtime_service/: CMakeLists.txt
examples/qrmi/python/direct_access/: example.py
examples/qrmi/python/pasqal_cloud/: example.py
examples/qrmi/python/qiskit_runtime_service/: example.py
examples/qrmi/rust/: Cargo.toml
examples/qrmi/rust/direct_access/: Cargo.toml
examples/qrmi/rust/direct_access/src/: main.rs
examples/qrmi/rust/pasqal_cloud/: Cargo.toml
examples/qrmi/rust/pasqal_cloud/src/: main.rs
examples/qrmi/rust/qiskit_runtime_service/: Cargo.toml
examples/qrmi/rust/qiskit_runtime_service/src/: main.rs
python/qiskit_qrmi/: __init__.py  qiskit_qrmi.pyi
python/qiskit_qrmi/primitives/: base_estimator.py  base_sampler.py  runtime_job_v2.py  service.py
python/qiskit_qrmi/primitives/ibm/: estimator.py  sampler.py  target.py
python/qiskit_qrmi/primitives/pasqal/: sampler.py  target.py
python/qiskit_qrmi/pulser_backend/: backend.py  service.py
python/tests/: test_all.py
src/: lib.rs  pyext.rs
src/ibm/: direct_access.rs  qiskit_runtime_service.rs
src/models/: payload.rs  target.rs  task_result.rs  task_status.rs
src/pasqal/: cloud.rs
