[build-system]
requires = ["maturin>=1.9,<2.0"]
build-backend = "maturin"

[project]
name = "qiskit-qrmi"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
]

dependencies = [
    "qiskit_ibm_runtime>=0.30.0",
    "qiskit_qasm3_import",
    "qiskit-pasqal-provider>=0.1.1",
    "pulser>=1.5.3",
]
authors = [
  {email = "qiskit@us.ibm.com"},
  {name = "IBM, Pasqal SAS and UKRI-STFC (Hartree Centre)"}
]
license = {file = "LICENSE"}
readme = "README.md"
description = "Quantum Resource Management Interface(QRMI)"
description_content_type = "text/markdown"
keywords = [
    "quantum-computing",
    "quantum-programming-language",
    "qiskit",
    "pulser",
    "slurm",
    "slurm-job-scheduler",
    "slurm-workload-manager",
    "python",
    "rust"
]
dynamic = ["version"]

[project.optional-dependencies]
tests = [
    "pytest",
]
[tool.maturin]
python-source = "python"
features = ["pyo3/extension-module", "pyo3/abi3", "python"]

[project.urls]
repository = "https://github.com/qiskit/qrmi.git"
Changelog = "https://github.com/qiskit/qrmi/blob/master/CHANGELOG.md"
